Remove extra space at the bottom due to previous bug fix

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -28,6 +28,7 @@
   overflow: hidden;
   top: -65px;
   position: relative;
+  margin-bottom: -65px;
 }
 
 .home-page {
